Fix text overflow during mid width resolution

--- a/src/Style.css
+++ b/src/Style.css
@@ -499,7 +499,7 @@ p {
   }
   p {
     width: 80%;
-    font-size: max(2.5vw, 11px);
+    font-size: max(2.2vw, 11px);
     display: flex;
     align-items: center;
     justify-content: center;
